# -----server

./: CMakeLists.txt  Text_msg_handler.cpp  Text_msg_handler.h  Text_recver_sender.cpp  Text_recver_sender.h  client_session.cpp  epoll.cpp  epoller.h  group.cpp  group.h  handle_msg.cpp  handle_msg.h  main.cpp  reactor.cpp  reactor.h  readme.md  receiver_sender.cpp  sender.h  server.cpp  server.h  session.cpp  session.h  thread_pool.cpp  thread_pool.h  to_do.txt  total.h  user.cpp  user.h  客户端交接.txt
include/: total.h
src/: main.cpp
src/logic/: UID_allocator.cpp  UID_allocator.h  account.cpp  account.h  account_manager.cpp  account_manager.h  group.cpp  group.h  group_manager.cpp  group_manager.h  social_module.cpp  social_module.h  social_module_manager.cpp  social_module_manager.h  social_relation_manager.cpp  social_relation_manager.h  user.h  users_manager.h
src/net_core/: client_session.cpp  client_session.h  epoller.cpp  epoller.h  message_handler.cpp  message_handler.h  receiver_sender.cpp  receiver_sender.h  session_manager.cpp  session_manager.h
src/utils/: thread_pool.cpp  thread_pool.h
